css-famias topograficas

--- a/Mapa.html
+++ b/Mapa.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
      <title></title>
 </head>
+<header><h1>Mapa del Perú</h1></header>
 <body>
     <img src="img/Regiones.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
@@ -13,4 +14,7 @@
     [...]
 </map>
 </body>
+<footer>
+    <p>dev master todos los derechos reservados</p>
+</footer>
 </html>
