--- a/costa.html
+++ b/costa.html
@@ -13,10 +13,11 @@
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus aliquam nihil ducimus ratione fuga molestiae incidunt perferendis adipisci blanditiis consequatur magni, optio autem iste iusto! Assumenda non eaque ut amet.
         Atque eos dolores quibusdam eius quaerat sequi, autem fugiat asperiores fuga consequuntur exercitationem quo, magni dicta. Sapiente dicta dolorum pariatur unde recusandae, iste beatae nobis. Saepe dolorem vero quam voluptatem!
         Libero alias iusto magnam labore minus ad velit quasi veritatis fugiat laborum. Fuga illo odit modi ipsa mollitia neque temporibus consectetur ducimus distinctio blanditiis rem at beatae, commodi ab omnis?</h1>
-        <a href="Mapa.html"></a>
+        <img src="img/Costa.jpg" alt=""><br>
+        <a href="Mapa.html"><h2>Regresar a Mapa</h2></a>
     </main>
     <footer>
-        <h3>dev master todos los derechos reservados</h3>
+        <p>dev master todos los derechos reservados</p>
     </footer>
 </body>
 </html>
